Load data from excel file to MySQL

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/Connection/Excel2DatabaseTest.java=UTF-8
 encoding//src/Connection/MySQLConnUtils.java=UTF-8
